# aagv3

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  impl.md  jadx.md  kv_api.yaml  llms-full.txt  malware_pattern.md  pyproject.toml  requirements.txt  sample_full.json
config/: SourcesAndSinks.txt  android_sensitive_api_catalog.json  loki.yaml  otel-collector.yaml  settings.yaml  suspicious_api_catalog.json  tempo.yaml
config/grafana/datasources/: datasource.yaml
config/mitre/: mapping_rules.json
config/schemas/: BackwardSlice.schema.json  CallGraph.schema.json  Cfg.schema.json  ContextBundle.schema.json  SuspiciousApiCatalog.schema.json  SuspiciousApiIndex.schema.json  ThreatReport.schema.json  Tier1Summary.schema.json  Tier2Intent.schema.json  VerifierResult.schema.json
docs/: architecture.md  configuration.md  development.md  troubleshooting.md
java/soot-extractor/: build.gradle
scripts/: analyze_apk.py  batch_analyze.py  docker_bootstrap.sh  docker_entrypoint.sh  test_claude_auth.py  test_claude_minimal.py  test_gemini_auth.py  update_mitre_mobile_dataset.py
server/: app.py
server/templates/: run_detail.html  runs.html
src/apk_analyzer/: __init__.py  main.py
test_apps/: malware1.apk
tests/: test_consistency_checker.py  test_cooccurrence_scorer.py  test_jimple_field_extraction.py  test_package_inventory.py  test_pattern_summary.py  test_reachability_paths.py  test_reflection_analyzer.py  test_sensitive_api_matcher.py  test_signature_normalize.py  test_sources_sinks_subset.py  test_threading_edge_validator.py
(+142 files in other folders)
